--- a/iterm/preferences/com.googlecode.iterm2.plist
+++ b/iterm/preferences/com.googlecode.iterm2.plist
@@ -216,18 +216,20 @@
 		<key>TB Is Shown</key>
 		<integer>1</integer>
 	</dict>
+	<key>NSWindow Frame NSFontPanel</key>
+	<string>300 136 919 348 0 0 1440 878 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>699 1696 700 622 699 900 2560 1418 </string>
+	<string>370 192 700 622 0 0 1440 878 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>996 1026 606 469 727 900 2560 1440 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>1026 1696 928 394 727 900 2560 1417 </string>
+	<string>109 375 918 423 0 0 1440 878 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>-2536 1633 592 584 -2766 800 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 0 1440 878 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 539 570 452 0 0 2560 1418 </string>
+	<string>0 238 570 452 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>0 27 1680 1000 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
@@ -860,7 +862,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Monaco 12</string>
+			<string>MesloLGMForPowerline-Regular 12</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -3077,6 +3079,8 @@
 	<real>527881684.43815798</real>
 	<key>NoSyncTurnOffBracketedPasteOnHostChange</key>
 	<false/>
+	<key>NoSyncTurnOffFocusReportingOnHostChange</key>
+	<false/>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -3137,7 +3141,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-12-02T04:34:24Z</date>
+	<date>2019-01-26T20:13:05Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
@@ -3165,7 +3169,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.2.6</string>
+	<string>3.2.7</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
