--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -73,9 +73,9 @@
 	<key>NSWindow Frame ProfilesPanel</key>
 	<string>204 457 735 382 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>251 290 928 394 0 0 1440 877 </string>
+	<string>345 629 928 394 0 0 1680 1050 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1440 877 0 0 1440 877 </string>
+	<string>0 500 570 377 0 0 1680 1050 </string>
 	<key>NeverWarnAboutShortLivedSessions_347BCA3C-71EA-4B5D-8244-B0CACF31B9CB</key>
 	<true/>
 	<key>NeverWarnAboutShortLivedSessions_347BCA3C-71EA-4B5D-8244-B0CACF31B9CB_selection</key>
@@ -691,7 +691,7 @@
 				<real>0.0</real>
 			</dict>
 			<key>Minimum Contrast</key>
-			<real>0.0</real>
+			<real>0.12781871448863635</real>
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
@@ -2078,6 +2078,8 @@
 	<integer>0</integer>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>584908801.62627006</real>
+	<key>NoSyncTurnOffBracketedPasteOnHostChange</key>
+	<false/>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>PointerActions</key>
@@ -2126,13 +2128,15 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-07-15T19:12:23Z</date>
+	<date>2019-07-16T21:42:16Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>findIgnoreCase_iTerm</key>
 	<true/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
